src/tests/testfiles/function-calls/parameter-type-3.txt
Error at 6:5: Arguments to function 'f' don't match: int vs float
f(0);
  ^
